Pagination kinda works, might break when combined with other filters.

--- a/styles/pagination.css
+++ b/styles/pagination.css
@@ -47,3 +47,7 @@
   .breweries-list > * + * {
     margin-top: 1rem;
   }
+
+  .current {
+    background-color: #000000; /* Darker blue for active page */
+  }
